--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build",
     "start": "NODE_ENV=production PORT=3000 HOSTNAME=0.0.0.0 next start",
     "lint": "next lint"
   },
