메모리 부족 에러 해결 - 배포 패키지 최적화 및 타임아웃 설정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,10 @@ jobs:
         
     - name: 배포 패키지 생성
       run: |
-        tar -czf deploy.tar.gz .next package.json package-lock.json public next.config.ts src tsconfig.json
+        # 불필요한 파일 제거하고 압축
+        rm -rf node_modules/.cache
+        tar -czf deploy.tar.gz .next package.json package-lock.json public next.config.ts src --exclude='*.log' --exclude='node_modules/.cache'
+        ls -lh deploy.tar.gz
         
     - name: 서버에 파일 업로드
       uses: appleboy/scp-action@v0.1.4
@@ -41,6 +44,8 @@ jobs:
         port: ${{ secrets.CAFE24_PORT }}
         source: "deploy.tar.gz"
         target: "/tmp/"
+        timeout: 300s
+        command_timeout: 300s
         
     - name: 서버에서 배포 실행
       uses: appleboy/ssh-action@v0.1.5
